--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ plotly==5.17.0
 pandas>=1.5.0
 numpy>=1.24.0
 flask>=2.2.0
+flask-socketio>=5.3.0
+gevent-websocket>=0.10.1
 requests>=2.31.0
 joblib>=1.3.0
 scikit-learn>=1.3.0
